--- a/styles.css
+++ b/styles.css
@@ -388,7 +388,7 @@ ul li a{
   color: #000000;
   font-size: 1.5rem;
   box-sizing: border-box;
-  margin: 15px;
+  margin: 1rem;
   text-align: center;
   float: left;
   width: 100%;
