--- a/styles.css
+++ b/styles.css
@@ -381,8 +381,7 @@ h1{
   float: left;
   text-align: center;
   width: 100%;
-  font-family: 'Merriweather', serif;
-  font-family: 'Playfair Display';
+  font-family: 'Playfair Display', serif;
   text-transform: uppercase;
   text-transform: uppercase;
   font-size: 5rem;
@@ -466,6 +465,22 @@ ul li a span{
 body.active .table>div>div>div{
   opacity: 1;
 }
+.small{
+  color: #ffffff;
+  font-family: 'Playfair Display', serif; 
+  display: block;
+  width: 100%;
+  float: left;
+  text-align: center;
+}
+
+.small a{
+  margin-top: 40px;
+  color: #ffffff;
+  text-decoration: underline;
+  margin-bottom: 0;
+  text-align: center;
+}
 
 @media(max-width: 720px){
   h1{
@@ -503,3 +518,4 @@ body.active .table>div>div>div{
     font-size: 1rem;
   }
 }
+
