--- a/styles.css
+++ b/styles.css
@@ -414,7 +414,7 @@ ul li a{
   width: 100%;
   display: block;
   box-sizing: border-box;
-  transition: .3s scale ease, 1.5s opacity ease;
+  transition: .3s transform ease, 1.5s opacity ease;
   opacity: 0;
 }
 body.active ul li a{
