--- a/styles.css
+++ b/styles.css
@@ -518,4 +518,16 @@ body.active .table>div>div>div{
     font-size: 1rem;
   }
 }
-
+li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+ul {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
